# hl_rec

./: CMakeLists.txt  README.md
include/: color.h  image_io.hh
src/: camera_pipe_generator.cc  color.cc  hl_rec.cc  image_io.cc
